--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,6 @@
 Change Log
 ==========
 
-1.0 (13/12/2020)
+1.0.2 (13/12/2020)
 ------------------
-- First Release: Stable
+- Second Release: Stable
